ODP-3.3.6.3-103: backport SPARK-37106 JavaModuleOptions for JDK17 runtime
Java 17 enforces strong module encapsulation, so Spark's reflective
access to internal JDK types (java.net.URI.scheme, java.nio.Bits.*,
sun.nio.ch.*, jdk.internal.ref.Cleaner, etc.) is denied without an
explicit `--add-opens` allowlist.

Backport JavaModuleOptions from Spark 3.3 verbatim into the launcher
module and inject defaultModuleOptions() into every spark-submit
command built by SparkSubmitCommandBuilder. The list starts with
-XX:+IgnoreUnrecognizedVMOptions so JDK 8 / 11 silently ignore the
add-opens flags - safe to enable unconditionally.

Validated against an InaccessibleObjectException on URI.scheme
from SizeEstimator -> Guava cache weigh path during DataFrame
parquet read on JDK17.